--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
-    <external-path
-        name="my_images"
-        path="Android/data/com.kadabra.agent/files/Pictures" />
+<!--    <external-path-->
+<!--        name="my_images"-->
+<!--        path="Android/data/com.kadabra.agent/files/Pictures" />-->
+    <cache-path name="shared_images" path="images/"/>
 </paths>
