--- a/app/src/main/res/layout/fragment_new_task.xml
+++ b/app/src/main/res/layout/fragment_new_task.xml
@@ -494,12 +494,50 @@
                         android:scrollbars="vertical" />
                 </RelativeLayout>
 
+                <TextView
+                    android:id="@+id/tvServiceCost"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/rlStops"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="20dp"
+                    android:fontFamily="Poppins-Regular"
+                    android:text="@string/service_cost"
+                    android:textColor="@color/title_color"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/tvAddServiceCost"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@+id/tvServiceCost"
+                    android:layout_below="@id/rlStops"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="24dp"
+                    android:background="?android:attr/selectableItemBackgroundBorderless"
+                    android:clickable="true"
+                    android:gravity="center"
+                    android:text="@string/add_new"
+                    android:textColor="@color/colorApp"
+                    android:textSize="18sp" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvServiceCost"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tvAddServiceCost"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="24dp"
+                    android:scrollbars="vertical"
+                    />
 
                 <Button
                     android:id="@+id/btnSave"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/rlStops"
+                    android:layout_below="@+id/rvServiceCost"
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="40dp"
                     android:layout_marginEnd="24dp"
