agent remove edit service cost

--- a/app/src/main/res/layout/service_cost_layout.xml
+++ b/app/src/main/res/layout/service_cost_layout.xml
@@ -75,7 +75,7 @@
             android:textColor="@color/red"
             android:textSize="13sp"
             android:textStyle="bold|italic"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
     </RelativeLayout>
 
 
