--- a/app/src/main/res/layout/ticket_layout.xml
+++ b/app/src/main/res/layout/ticket_layout.xml
@@ -32,8 +32,8 @@
             android:id="@+id/tvTicketName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/ivTag"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="20dp"
             android:layout_marginEnd="10dp"
             android:layout_toEndOf="@+id/ivProductImage"
             android:ellipsize="end"
@@ -86,8 +86,7 @@
             android:maxLines="1"
             android:textColor="@color/colorPrimary"
             android:textSize="14sp"
-            tools:text="Agent Name"
-            />
+            tools:text="Agent Name" />
 
         <TextView
             android:id="@+id/tvPriority"
@@ -110,8 +109,7 @@
             android:layout_marginTop="7dp"
             android:textColor="@color/green"
             android:textSize="13sp"
-            tools:text="Courier Name"
-            />
+            tools:text="Courier Name" />
 
         <TextView
             android:id="@+id/tvComingTaskPickupTime"
@@ -126,8 +124,35 @@
             android:maxLines="1"
             android:textColor="@color/black"
             android:textSize="13sp"
-            tools:text="3-5-2020"
-            android:textStyle="italic"/>
+            android:textStyle="italic"
+            tools:text="3-5-2020" />
+
+        <ImageView
+            android:id="@+id/ivTag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/ic_tag"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/tvTaggedAgent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvComingTaskPickupTime"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="7dp"
+            android:ellipsize="end"
+            android:gravity="start"
+            android:maxLines="1"
+            android:textColor="@color/colorPrimary"
+            android:textSize="13sp"
+            android:textStyle="italic"
+            android:visibility="invisible"
+            tools:text="Name" />
 
         <TextView
             android:id="@+id/tvTotalTasks"
